Initialize Stencil JS project

--- a/.gitignore
+++ b/.gitignore
@@ -103,5 +103,30 @@ dist
 # TernJS port file
 .tern-port
 
-# MacOS stuff
+# Stencil JS
+dist/
+www/
+loader/
+
+*~
+*.sw[mnpcod]
+*.log
+*.lock
+*.tmp
+*.tmp.*
+log.txt
+*.sublime-project
+*.sublime-workspace
+
+.stencil/
+.idea/
+.vscode/
+.sass-cache/
+.versions/
+node_modules/
+$RECYCLE.BIN/
+
 .DS_Store
+Thumbs.db
+UserInterfaceState.xcuserstate
+.env
